testdata/invalid/invalid_const_duplicate_name.bop
const uint64 hello = 1; 
const uint64 hello = 1;